# purge-tool-backend

./: README.md  main.py  pyproject.toml  requirements.txt  server.py
purge_core/: base_scanner.py  models.py  scanner_manager.py
purge_core/scanners/: browser_scanner.py  system_scanner.py
