[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purge-tool-core"
version = "0.1.0"
description = "Core engine for system cleanup tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']